--- a/pyha-chrome/manifest.json
+++ b/pyha-chrome/manifest.json
@@ -1,26 +1,27 @@
 {
   "name": "ПЫХА",
-  "version": "1.1",
+  "version": "2.0",
   "manifest_version": 2,
   "description": "Проверка непрочитанных на пыхе",
   "homepage_url": "http://pyha.ru/",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "img/icon16.png",
+    "48": "img/icon48.png",
+    "128": "img/icon128.png"
   },
   "default_locale": "en",
   "background": {
     "scripts": [
-      "src/bg/background.js"
+      "src/background.js"
     ],
     "persistent": true
   },
   "browser_action": {
-    "default_icon": "icons/icon19.png",
+    "default_icon": "img/icon19.png",
     "default_title": "ПЫХА",
-    "default_popup": "src/browser_action/browser_action.html"
+    "default_popup": "src/browser_action.html"
   },
+  "options_page": "src/options.html",
   "permissions": [
     "notifications",
     "tabs",
